# ghcjs-clipper

./: ghcjs-clipper.cabal  stack.yaml
src/GHCJS/: Clipper.hs
src/GHCJS/Clipper/: Clipper.hs  ClipperOffset.hs  Types.hs
